[package]
name = "polkapad-staking"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Polkapad"]

[dependencies]
staking-io = { path = "io" }
ft-io = { path = "../fungible-token/io" }

codec = { package = "parity-scale-codec", version = "~3.1.2", default-features = false, features = ["derive", "full"]}
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
